Available, Degree Added

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <div class="top-nav">
           <ul>
             <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="avail-doctor.php">Available Doctors</a></li>
 
             <li><a href="contact.php">contact</a></li>
           </ul>
